make changes to html file

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
       <h2>Discover</h2>
       <div class="discover-card">
         <img src="" alt="News Image">
-        <h3 class="newsTitle1"></h3>
+        <h3>MohBad is Dead!</h3>
         <p>Ilerioluwa Oladimeji Aloba (8 June 1996 - 12 September 2023), known professionally as MohBad, was a Nigerian
           rapper, singer, and songwriter from Lagos. He was formerly signed to Naira Marley's Marlian Records and left
           the label in 2022. He was best known for his hit singles "Ponmo, Feel Good", and "KPK"...
@@ -122,13 +122,12 @@
       </div>
       <div class="discover-card">
         <img src="" alt="News Image">
-        <h3 class="newsTitle2">MohBad is Dead!</h3>
+        <h3>Man City recover from Red Star shock for winning Champions League start</h3>
         <p>Julian Alvarez saved Manchester City's blushes after Red Star Belgrade took a shock lead at the Etihad as the
           holders began their Champions League defence with a 3-1 win on Tuesday.</p>
         <a href="https://guardian.ng/sport/man-city-recover-from-red-star-shock-for-winning-champions-league-start/">Read
           More</a>
       </div>
-      <!-- Add more news cards as needed -->
     </section>
 
   </div>
